[update] adds memeber card styles

--- a/wp-content/themes/kleo-child/assets/sass/helpers/_vars.scss
+++ b/wp-content/themes/kleo-child/assets/sass/helpers/_vars.scss
@@ -12,6 +12,10 @@ $category-icons: (
 );
 
 $theme-colors: (
+  green: #53C473,
+  purple: #9472C1,
+  blue: #5797AD,
+  grey: #999999
 );
 
 $breakpoints: (
