--- a/wp-content/themes/kleo-child/assets/sass/modules/_member.sass
+++ b/wp-content/themes/kleo-child/assets/sass/modules/_member.sass
@@ -44,12 +44,19 @@
 		padding: 15px
 		background-color: map-get($theme-colors, green)
 		border-radius: 0 0 3px 3px
+		&:empty
+			background-color: transparent
+			padding: 5px
 		.friendship-button
 			a
 				color: white
 				transition: all .4s
 				&:hover
 					color: black
+			&.not_friends
+				a 
+					background-color: white
+					color: map-get($theme-colors, green)
 		#send-private-message
 			a 
 				color: white
