Add some profile search styling

--- a/wp-content/themes/kleo-child/assets/sass/application.sass
+++ b/wp-content/themes/kleo-child/assets/sass/application.sass
@@ -8,11 +8,6 @@
 @import helpers/helpers
 @import helpers/placeholders
 
-// Sprites
-// @import sprites/sprites
-// @import sprites/retina-sprites
-// @import sprites/spritesheet
-
 // Base
 @import base/reset
 @import base/base
@@ -20,3 +15,4 @@
 // Modules
 @import modules/header
 @import modules/member
+@import modules/profile-search
