Add partials for footer related content

--- a/wp-content/themes/kleo-child/assets/sass/application.sass
+++ b/wp-content/themes/kleo-child/assets/sass/application.sass
@@ -11,8 +11,11 @@
 // Base
 @import base/reset
 @import base/base
+@import base/b-button
 
 // Modules
 @import modules/header
 @import modules/member
 @import modules/profile-search
+@import modules/footer-cta
+@import modules/footer-bar
