--- a/wp-content/themes/kleo-child/assets/sass/helpers/_vars.scss
+++ b/wp-content/themes/kleo-child/assets/sass/helpers/_vars.scss
@@ -15,7 +15,8 @@ $theme-colors: (
   green: #53C473,
   purple: #9472C1,
   blue: #5797AD,
-  grey: #999999
+  grey: #999999,
+  dark-grey: #352B39
 );
 
 $breakpoints: (
