--- a/wp-content/themes/kleo-child/assets/sass/modules/_footer-bar.sass
+++ b/wp-content/themes/kleo-child/assets/sass/modules/_footer-bar.sass
@@ -12,3 +12,23 @@
 
     a
       color: #fff !important
+
+.footer-graphic
+  background-size: cover
+  width: 100%
+  height: 400px
+  margin-bottom: 25px
+  display: flex
+  align-items: center
+  justify-content: center
+  flex-direction: column
+
+  img.logo
+    width: 225px
+    height: auto
+    margin:
+      bottom: 15px
+
+  p
+    margin:
+      bottom: 30px
