Remove select box space between rule cuz its silly

--- a/wp-content/themes/kleo-child/assets/sass/modules/_profile-search.sass
+++ b/wp-content/themes/kleo-child/assets/sass/modules/_profile-search.sass
@@ -1,10 +1,10 @@
 .profile_search
   form
     display: flex
-    justify-content: space-between
+    justify-content: center
 
     .form-group
-      flex-basis: 25%
+      margin-right: 15px
 
     p
       display: none
