--- a/wp-content/themes/kleo-child/assets/sass/modules/_profile-search.sass
+++ b/wp-content/themes/kleo-child/assets/sass/modules/_profile-search.sass
@@ -5,6 +5,8 @@
 
     .form-group
       margin-right: 15px
+      min-width: 200px
+      max-width: 200px
 
     p
       display: none
@@ -15,7 +17,9 @@
       border: none
       margin: 0 !important
       padding: 8px 12px
-
+      min-width: 200px
+      max-width: 200px
+      
     select
       background-color: #fff !important
       border-radius: 2px
