--- a/wp-content/themes/kleo-child/assets/sass/modules/_profile-search.sass
+++ b/wp-content/themes/kleo-child/assets/sass/modules/_profile-search.sass
@@ -1,12 +1,15 @@
 .profile_search
   form
-    display: flex
-    justify-content: center
+    +media(min, map-get($breakpoints, tablet-large))
+      display: flex
+      justify-content: center
 
     .form-group
-      margin-right: 15px
-      min-width: 200px
-      max-width: 200px
+      width: 100%
+      +media(min, map-get($breakpoints, tablet-large))
+        margin-right: 15px
+        min-width: 200px
+        max-width: 200px
 
     p
       display: none
@@ -19,7 +22,7 @@
       padding: 8px 12px
       min-width: 200px
       max-width: 200px
-      
+
     select
       background-color: #fff !important
       border-radius: 2px
