Add base cubano font

--- a/wp-content/themes/kleo-child/assets/sass/base/_b-button.sass
+++ b/wp-content/themes/kleo-child/assets/sass/base/_b-button.sass
@@ -5,6 +5,7 @@
   border-radius: 3px
   color: #fff !important
   text-transform: uppercase
+  font-family: 'CubanoRegular'
 
   &:hover
     background: #fff
