--- a/wp-content/themes/kleo-child/assets/sass/application.sass
+++ b/wp-content/themes/kleo-child/assets/sass/application.sass
@@ -7,6 +7,7 @@
 @import helpers/mixins
 @import helpers/helpers
 @import helpers/placeholders
+@import base/typography
 
 // Base
 @import base/b-button
