Remove giant members directory form from members listing

--- a/wp-content/themes/kleo-child/assets/sass/modules/_profile-search.sass
+++ b/wp-content/themes/kleo-child/assets/sass/modules/_profile-search.sass
@@ -26,3 +26,7 @@
     select
       background-color: #fff !important
       border-radius: 2px
+
+#members-directory-form
+  div.item-list-tabs#subnav
+    display: none
