--- a/wp-content/themes/kleo-child/assets/sass/application.sass
+++ b/wp-content/themes/kleo-child/assets/sass/application.sass
@@ -17,6 +17,7 @@
 @import modules/member
 @import modules/profile-search
 @import modules/buddy-press
+@import modules/register
 
 @import modules/footer-cta
 @import modules/footer-bar
