Add border around profile saerch box

--- a/wp-content/themes/kleo-child/assets/sass/modules/_profile-search.sass
+++ b/wp-content/themes/kleo-child/assets/sass/modules/_profile-search.sass
@@ -30,3 +30,9 @@
 #members-directory-form
   div.item-list-tabs#subnav
     display: none
+
+
+#search-members-form
+  box-shadow: none !important
+  border: 2px solid
+  border-color: map-get($theme-colors, green) !important
