Add some color to the profile page

--- a/wp-content/themes/kleo-child/assets/sass/modules/_buddy-press.sass
+++ b/wp-content/themes/kleo-child/assets/sass/modules/_buddy-press.sass
@@ -3,3 +3,16 @@
 
 #forums-personal-li
 	display: none
+
+#buddypress div#item-nav ul #activity-personal-li a:before
+	color: map-get($theme-colors, green) !important
+#buddypress div#item-nav ul #xprofile-personal-li a:before
+	color: map-get($theme-colors, green) !important
+#buddypress div#item-nav ul #notifications-personal-li a:before
+	color: map-get($theme-colors, green) !important
+#buddypress div#item-nav ul #messages-personal-li a:before
+	color: map-get($theme-colors, green) !important
+#buddypress div#item-nav ul #friends-personal-li a:before
+	color: map-get($theme-colors, green) !important
+#buddypress div#item-nav ul #settings-personal-li a:before
+	color: map-get($theme-colors, green) !important
